; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_218.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_218.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"\0AUsage: %s [offset up/down] [eip]\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"Examples:\0A\00", align 1
@.str.2 = private unnamed_addr constant [67 x i8] c"\09%s 347 up                 -=- Default EIP increased by 347 bytes\0A\00", align 1
@.str.3 = private unnamed_addr constant [67 x i8] c"\09%s 347 down               -=- Default EIP decreased by 347 bytes\0A\00", align 1
@.str.4 = private unnamed_addr constant [71 x i8] c"\09%s 429 up 0x%lx      -=- EIP set to 0x%lx and increased by 429 bytes\0A\00", align 1
@RET = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [72 x i8] c"\09%s 429 down 0x%lx    -=- EIP set to 0x%lx and decreased by 429 bytes\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 (i32, i8*, ...) @fprintf(i32 %3, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %4)
  %6 = load i32, i32* @stderr, align 4
  %7 = call i32 (i32, i8*, ...) @fprintf(i32 %6, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32, i32* @stderr, align 4
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 (i32, i8*, ...) @fprintf(i32 %8, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.2, i64 0, i64 0), i8* %9)
  %11 = load i32, i32* @stderr, align 4
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %11, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.3, i64 0, i64 0), i8* %12)
  %14 = load i32, i32* @stderr, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = load i64, i64* @RET, align 8
  %17 = load i64, i64* @RET, align 8
  %18 = add nsw i64 %17, 429
  %19 = call i32 (i32, i8*, ...) @fprintf(i32 %14, i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.4, i64 0, i64 0), i8* %15, i64 %16, i64 %18)
  %20 = load i32, i32* @stderr, align 4
  %21 = load i8*, i8** %2, align 8
  %22 = load i64, i64* @RET, align 8
  %23 = load i64, i64* @RET, align 8
  %24 = sub nsw i64 %23, 429
  %25 = call i32 (i32, i8*, ...) @fprintf(i32 %20, i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.5, i64 0, i64 0), i8* %21, i64 %22, i64 %24)
  %26 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
